praxis2/testresults/praxis2/compile.log
-- The C compiler identification is GNU 7.5.0
-- The CXX compiler identification is GNU 7.5.0
-- Check for working C compiler: /usr/bin/cc
-- Check for working C compiler: /usr/bin/cc -- works
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Detecting C compile features
-- Detecting C compile features - done
-- Check for working CXX compiler: /usr/bin/c++
-- Check for working CXX compiler: /usr/bin/c++ -- works
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Detecting CXX compile features
-- Detecting CXX compile features - done
CMake Warning (dev) in CMakeLists.txt:
  No cmake_minimum_required command is present.  A line of code such as

    cmake_minimum_required(VERSION 3.10)

  should be added at the top of the file.  The version specified may be lower
  if you wish to support older CMake versions for this project.  For more
  information run "cmake --help-policy CMP0000".
This warning is for project developers.  Use -Wno-dev to suppress it.

-- Configuring done
-- Generating done
-- Build files have been written to: /mnt/src/build
Scanning dependencies of target client
[  6%] Building C object CMakeFiles/client.dir/src/client.o
In file included from /mnt/src/include/hash_table.h:4:0,
                 from /mnt/src/include/scratch1.h:6,
                 from /mnt/src/src/client.c:11:
/mnt/src/include/scratch1.h:31:22: error: unknown type name 'htable'; did you mean 'double'?
 void test_htable_set(htable** ht);
                      ^~~~~~
                      double
CMakeFiles/client.dir/build.make:62: recipe for target 'CMakeFiles/client.dir/src/client.o' failed
make[2]: *** [CMakeFiles/client.dir/src/client.o] Error 1
CMakeFiles/Makefile2:67: recipe for target 'CMakeFiles/client.dir/all' failed
make[1]: *** [CMakeFiles/client.dir/all] Error 2
make: *** [all] Error 2
Makefile:105: recipe for target 'all' failed
